Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4516

missing leXX_to_cpu() on some accesses to struct lu_dirpage and struct lu_dirent members

XMLWordPrintable

    • 3
    • 12355

      Looking at the source (v2_5_54_0-32-g5aa4ccc) I see several accesses to the members of lu_dirpage and lu_dirent that do not use leXX_to_cpu(). Here are a few:

      d lustre/mdc/mdc_request.c     mdc_read_entry               1676 if (dp->ldp_hash_end == MDS_DIR_END_OFF) {
      e lustre/mdc/mdc_request.c     mdc_read_entry               1681 op_data->op_hash_offset = dp->ldp_hash_end;
      f lustre/mdc/mdc_request.c     mdc_read_entry               1762 if (dp->ldp_hash_end < op_data->op_hash_offset)
      
      9 lustre/mdc/mdc_request.c           mdc_read_entry               1667 if (ent->lde_hash > op_data->op_hash_offset)
      a lustre/mdc/mdc_request.c           mdc_read_entry               1767 if (ent->lde_hash >= op_data->op_hash_offset)
      

      I didn't try to find all of them.

            di.wang Di Wang (Inactive)
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: